guides/predicted-latency-based-scheduling/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-d-predicted-latency
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: infra-kv-events-inference-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
          headers:
            - type: Exact
              name: x-routing-scenario
              value: predicted-latency
      backendRefs:
        - group: inference.networking.k8s.io
          kind: InferencePool
          name: gaie-predicted-latency
          port: 8000
          weight: 1
      timeouts:
        backendRequest: 0s
        request: 0s
